# pulsar-lite

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyrightconfig.json
.claude/: README.md
.claude/skills/: add-command.md  diagnose.md  gen-test.md  impl-dispatcher.md  review-pulsar.md
.claude/templates/: command_handler.rs.tmpl  dispatcher.rs.tmpl  dispatcher_test.py.tmpl  test_protocol.py.tmpl
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-private-wheel.yml  cd.yml  ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  PROJECT_OVERVIEW.md  PULSAR_BINARY_PROTOCOL.md  README.md  TESTING.md
docs/analysis/: Pulsar消息消费完整流程源码解析.md  Pulsar消息生产完整流程源码解析.md
docs/design/consumer/: shared.md
docs/design/storage/: storage.md
docs/difference/: exclusive_subscription_comparison.md  failover_subscription_comparison.md  shared_subscription_comparison.md  storage_metadata_comparison.md
docs/perf/: non_persistent_copy_path_optimization.md  non_persistent_dispatcher_optimization.md  non_persistent_e2e_pulsar_perf_matrix.md  non_persistent_topic_fanout_optimization.md  query_stats_path_optimization.md
docs/plans/: 2026-04-17-e2e-perf-stress-design.md  2026-04-17-e2e-perf-stress-plan.md  2026-04-17-memory-allocation-pool-design.md
docs/tests/: non_persistent_test_coverage.md
examples/: basic_usage.py
python/: README.md  example_usage.py  pyproject.toml  setup.py
python/src/pulsar_lite/: __init__.py  binary_finder.py  client.py  process_manager.py
rust/: Cargo.toml  build.rs  pulsar-lite.sh  pulsar-lite.toml
rust/proto/: MLDataFormats.proto
rust/src/: config.rs  error.rs  lib.rs  main.rs
rust/src/broker/: broker_service.rs  connection_limiter.rs  mod.rs
rust/src/broker/dispatcher/: enums.rs  exclusive.rs  failover.rs  key_shared.rs  mod.rs  read_position.rs  redelivery_controller.rs  shared.rs  single_active.rs  sticky_key.rs  traits.rs
rust/src/broker/handler/: connection_handler.rs  consumer_handler.rs  lookup_handler.rs  mod.rs  producer_handler.rs
rust/src/broker/non_persistent/: mod.rs  runtime.rs
rust/src/broker/non_persistent/dispatcher/: mod.rs  multiple_consumers.rs  single_active.rs  sticky_key.rs
rust/src/broker/service/: connection_write_state.rs  consumer.rs  mod.rs  pending_acks.rs  producer.rs  server_cnx.rs
rust/src/broker/service/persistent/: mod.rs  persistent_subscription.rs  persistent_topic.rs
rust/src/broker/service/topic/: mod.rs  partitioned_topic.rs  subscription.rs  topic.rs
rust/src/broker/service/topic/tests/: mod.rs  partitioned_topic.rs  subscription_non_persistence.rs  subscription_persistence.rs  topic.rs
rust/src/broker/stats/: metrics.rs  mod.rs
rust/src/protocol/: codec.rs  command.rs  mod.rs
rust/src/storage/: mod.rs
rust/src/storage/managed_ledger/: assignment.rs  config.rs  cursor.rs  cursor_init.rs  cursor_read.rs  factory.rs  ledger.rs  memory.rs  mod.rs  rocksdb.rs  storage.rs  store.rs  types.rs
rust/src/storage/metadata/: json.rs  mod.rs  store.rs  traits.rs  types.rs
rust/src/storage/resources/: base.rs  mod.rs  namespace.rs  pulsar.rs  tenant.rs  topic.rs
rust/src/storage/rocksdb/: cursor.rs  entrylog.rs  factory.rs  keys.rs  ledger.rs  metadata.rs  mod.rs  storage.rs  tests.rs
rust/storage/core/: Cargo.toml
rust/storage/core/src/: backend.rs  config.rs  error.rs  lib.rs  service.rs
rust/storage/core/tests/: storage_backend.rs  storage_resources.rs
rust/storage/core/tests/common/: mod.rs
rust/storage/managed-ledger/: Cargo.toml
rust/storage/managed-ledger-rocksdb/: Cargo.toml  build.rs
rust/storage/managed-ledger-rocksdb/src/: cursor.rs  entrylog.rs  factory.rs  keys.rs  ledger.rs  lib.rs  metadata.rs  store.rs
rust/storage/managed-ledger-rocksdb/tests/: rocksdb_cursor.rs  rocksdb_entrylog.rs  rocksdb_keys.rs  rocksdb_ledger.rs  rocksdb_seek.rs  rocksdb_storage.rs
rust/storage/managed-ledger-rocksdb/tests/common/: mod.rs
rust/storage/managed-ledger/src/: cursor.rs  cursor_init.rs  cursor_read.rs  factory.rs  ledger.rs  legacy_storage.rs  lib.rs  memory.rs  position.rs
rust/storage/managed-ledger/tests/: memory_cursor.rs  memory_ledger.rs
rust/storage/metadata/: Cargo.toml
rust/storage/metadata/src/: file.rs  key.rs  lib.rs  memory.rs  model.rs  store.rs
rust/storage/metadata/tests/: file_store.rs  memory_store.rs
rust/storage/resources/: Cargo.toml  README.md  README.zh-CN.md
rust/storage/resources/src/: lib.rs  namespace.rs  pulsar.rs  tenant.rs  topic.rs
rust/storage/resources/tests/: resources.rs
scripts/: check_commit_msg.py  run_python_tests_with_broker.sh  run_rust_clippy.sh
tests/: conftest.py  pulsar_client_process.py  test_binary_protocol.py  test_client_behaviors.py  test_connection_management.py  test_metadata_persistence.py  test_python_wheel_tag.py  test_shared_dispatcher.py  test_shared_flow_control.py  test_shared_integration.py  test_shared_simple.py  test_support.py
tests/non_persist/: support.py  test_non_persist_ack_semantics.py  test_non_persist_basic.py  test_non_persist_disconnect_reconnect.py  test_non_persist_dynamic_consumers.py  test_non_persist_flow_control.py  test_non_persist_isolation.py  test_non_persist_key_shared.py  test_non_persist_ordering.py  test_non_persist_subscription_modes.py  test_non_persist_unsupported_semantics.py
tests/perf/: run_non_persistent_e2e_matrix.py  run_non_persistent_stress.py
tests/perf/docker/: Dockerfile.broker
tests/perf/lib/: __init__.py  broker.py  docker_image.py  observability.py  parsing.py  perf_cmd.py  run_metadata.py
tests/perf/unit/: test_docker_image.py  test_run_metadata.py
tests/persist/: support.py  test_persistent_basic.py  test_persistent_redelivery.py  test_persistent_restart.py  test_persistent_subscription_modes.py
