[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsar-lite"
version = "0.1.0"
description = "Embedded lightweight message queue compatible with Apache Pulsar - Milvus Lite style experience"
authors = [{name = "Pulsar Lite Team"}]
license = {text = "Apache-2.0"}
readme = {text = "Pulsar Lite Python helper package for starting and connecting to a local Pulsar Lite broker.", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pulsar-client>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ascentstream/pulsar-lite"
Documentation = "https://github.com/ascentstream/pulsar-lite#readme"
Repository = "https://github.com/ascentstream/pulsar-lite"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulsar_lite = ["bin/pulsar-lite", "bin/pulsar-lite.exe"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E402", # Some perf tests adjust sys.path before importing local helpers.
    "E501", # Perf command and parser definitions contain intentionally long literals.
    "E722", # Existing process cleanup paths use broad exception handling.
    "N801", # setuptools command classes intentionally follow bdist_* naming.
]
