[package]
name = "pulsar-lite"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Lite Team"]
license = "Apache-2.0"
description = "Embedded lightweight message queue compatible with Apache Pulsar"

[features]
default = []
rocksdb-storage = ["dep:rocksdb"]

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"
rocksdb = { version = "0.22", default-features = false, optional = true }

# Async trait support
async-trait = "0.1"

# 命令行参数
clap = { version = "4.4", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# 流处理
tokio-stream = "0.1"
futures = "0.3"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3.9"
