[package]
name = "pulsar-lite-storage-managed-ledger-rocksdb"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pulsar-lite-storage-managed-ledger = { path = "../managed-ledger" }
anyhow.workspace = true
rocksdb = "0.24"
prost = "0.13"
serde.workspace = true
bincode = "1.3"
log.workspace = true

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3.9"
tokio = { version = "1", features = ["macros", "rt"] }
bincode = "1.3"
prost = "0.13"
